css/style.css
body {
    font-family: Arial, Verdana;
    background-color: #000000;
    color: #ffffff;
    margin: 20px 20px 0 20px;
}
h1 {
    font-size: 42px;
    text-align: center;
    padding: 15px;
}
h2 {
    font: 30px;
    color: #0D0D0D;
}
p {
    font-size: 24px;
    padding: 10px 0 0 10px;
}
img {
    width: 250px;
    border: 10px dashed white;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
div {
    height: auto;
    min-height: 125px;
    padding: 20px;
    border: 3px solid white;
}
footer {
    background: rgb(0, 0, 0);
    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 255, 1) 25%, rgba(0, 102, 255, 1) 70%, rgba(0, 0, 0, 1) 100%);
    border: 5px solid white;
}
.introduction {
    border-radius: 15px;
    margin-top: 15px;
    line-height: 2;
}
.red {
    background-color: #ff0000;
    text-align: right;
    margin-left: 50px;
    border-bottom-width: 2px;
    border-left-width: 5px;
}
.blue {
    background-color: #0000ff;
    text-align: left;
    margin-right: 50px;
    border-right-width: 5px;
    border-top-width: 2px;
}
.yellow {
    background-color: #ffff00;
    text-align: right;
    margin-left: 50px;
    border-bottom-width: 2px;
    border-left-width: 5px;
}
.green {
    background-color: #008500;
    text-align: left;
    margin-right: 50px;
    border-right-width: 5px;
    border-top-width: 2px;
}

